デザイン修正2

--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,9 @@
   <header><h1>献立一覧</h1></header>
 
   <main>
+    <p class="page-description">
+      ホーム画面でいいね❤️したお気に入りレシピ！！
+    </p>
     <ul id="menu-list" class="list-container"></ul>
     <p id="empty-message" class="hidden" style="text-align: center; margin-top: 20px;">まだ献立がありません。</p>
   </main>
