--- a/index.html
+++ b/index.html
@@ -9,21 +9,39 @@
 <body>
 
   <header>
-  <h1 id="header-title">今日の献立候補</h1>
-  <input type="text" id="search-bar" class="hidden" placeholder="レシピ名で検索...">
-  <div class="header-icons">
-    <button class="icon-btn" id="search-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+    <h1 id="header-title">今日の献立候補</h1>
+    <input type="text" id="search-bar" class="hidden" placeholder="レシピ名で検索...">
+    <div class="header-icons">
+      <button class="icon-btn" id="search-btn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+      </button>
+      <button class="icon-btn" id="settings-btn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
     </button>
-    <button class="icon-btn" id="settings-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19.44 12.99a1.99 1.99 0 0 0-1.23-2.82l-1.39-.5-1.04-1.6a1.99 1.99 0 0 0-3.56 0l-1.04 1.6-1.39.5a1.99 1.99 0 0 0-1.23 2.82l.46 1.48-1.04 1.6a1.99 1.99 0 0 0 1.78 2.82l1.39-.5 1.04 1.6a1.99 1.99 0 0 0 3.56 0l1.04-1.6 1.39.5c1.4.5 2.82-.5 2.82-1.78l-.46-1.48z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-    </button>
-  </div>
-</header>
+    </div>
+  </header>
 
   <main>
     <div class="card-container"></div>
   </main>
+
+  <div id="tutorial-overlay">
+    <div class="tutorial-text tutorial-left">
+        <span>❌</span>
+        <p>興味なし</p>
+    </div>
+    <div class="tutorial-text tutorial-main">
+        <p>左右にスワイプして<br>気になるレシピを見つけよう！</p>
+        <div class="swipe-arrow-container">
+          <svg class="swipe-arrow" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 18l-6-6 6-6"/></svg>
+          <svg class="swipe-arrow" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 18l6-6-6-6"/></svg>
+        </div>
+    </div>
+    <div class="tutorial-text tutorial-right">
+        <span>❤️</span>
+        <p>保存する</p>
+    </div>
+  </div>
 
   <footer>
     <nav class="bottom-nav">
