デザイン修正3

--- a/shopping-list.html
+++ b/shopping-list.html
@@ -10,11 +10,16 @@
     <header><h1>買い物リスト</h1></header>
 
     <main>
-        <ul id="shopping-list" class="list-container todo-list"></ul>
-        <p id="shopping-empty-message" class="hidden" style="text-align: center; margin-top: 20px;">買うものはありません！</p>
+        <p class="page-description">
+          不足している食材を自動でリストアップ！！
+        </p>
         <div id="total-cost-container" class="hidden">
             <strong>レシピ合計金額: </strong><span id="total-cost">0</span>円
         </div>
+
+        <ul id="shopping-list" class="list-container todo-list"></ul>
+        <p id="shopping-empty-message" class="hidden" style="text-align: center; margin-top: 20px;">買うものはありません！</p>
+        
     </main>
 
     <footer>
