--- a/shopping-list.html
+++ b/shopping-list.html
@@ -11,8 +11,9 @@
 
     <main>
         <p class="page-description">
-          不足している食材を自動でリストアップ！！
+          「献立」と「在庫」を比べて<br>足りない食材を自動でリストアップします。
         </p>
+
         <div id="total-cost-container" class="hidden">
             <strong>レシピ合計金額: </strong><span id="total-cost">0</span>円
         </div>
@@ -24,12 +25,24 @@
 
     <footer>
         <nav class="bottom-nav">
-            <a href="index.html">ホーム</a>
-            <a href="menu.html">献立</a>
-            <a href="stock.html">在庫</a>
-            <a href="shopping-list.html" class="active">買い物リスト</a>
+          <a href="index.html">
+            <i class="nav-icon" id="icon-home"></i>
+            <span>ホーム</span>
+          </a>
+          <a href="menu.html">
+            <i class="nav-icon" id="icon-menu"></i>
+            <span>献立</span>
+          </a>
+          <a href="stock.html">
+            <i class="nav-icon" id="icon-stock"></i>
+            <span>在庫</span>
+          </a>
+          <a href="shopping-list.html" class="active">
+            <i class="nav-icon" id="icon-cart"></i>
+            <span>買い物リスト</span>
+          </a>
         </nav>
-    </footer>
+        </footer>
     <script src="js/shopping-list.js"></script>
 </body>
 </html>
