--- a/stock.html
+++ b/stock.html
@@ -10,15 +10,18 @@
     <header>
       <h1>在庫管理</h1>
       <div class="header-icons">
-        </div>
+      </div>
     </header>
+
     <main>
         <p class="page-description">
-          購入した食材と賞味期限を管理できます!!
+          購入した食材や使い残しを<br>賞味期限と一緒に管理できます。
         </p>
+
         <ul id="stock-list" class="list-container"></ul>
+        
         <p id="stock-empty-message" class="hidden" style="text-align: center; margin-top: 20px;">
-          在庫はまだありません
+          在庫はまだありません。
         </p>
     </main>
 
@@ -47,17 +50,31 @@
 
       </div>
     </div>
+
     <button class="floating-action-button" id="show-form-btn">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
     </button>
+
     <footer>
         <nav class="bottom-nav">
-            <a href="index.html">ホーム</a>
-            <a href="menu.html">献立</a>
-            <a href="stock.html" class="active">在庫</a>
-            <a href="shopping-list.html">買い物リスト</a>
+          <a href="index.html">
+            <i class="nav-icon" id="icon-home"></i>
+            <span>ホーム</span>
+          </a>
+          <a href="menu.html">
+            <i class="nav-icon" id="icon-menu"></i>
+            <span>献立</span>
+          </a>
+          <a href="stock.html" class="active">
+            <i class="nav-icon" id="icon-stock"></i>
+            <span>在庫</span>
+          </a>
+          <a href="shopping-list.html">
+            <i class="nav-icon" id="icon-cart"></i>
+            <span>買い物リスト</span>
+          </a>
         </nav>
-    </footer>
+        </footer>
     <script src="js/stock.js"></script>
 </body>
 </html>
