--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <span>買い物リスト</span>
       </a>
     </nav>
-    </footer>
+  </footer>
 
   <div id="modal-overlay" class="hidden">
     <div id="modal-content">
@@ -79,9 +79,13 @@
         <p><strong>カロリー:</strong> <span id="modal-calories"></span></p>
         <p><strong>使用器具:</strong> <span id="modal-tools"></span></p>
       </div>
+
+      <button class="modal-ai-btn" id="modal-ai-btn">
+        <i class="icon-comment"></i>
+      </button>
       <button id="modal-close-btn">閉じる</button>
     </div>
-  </div>
+    </div>
 
   <script src="js/main.js"></script>
 
