デザイン修正7

--- a/shopping-list.html
+++ b/shopping-list.html
@@ -11,7 +11,7 @@
 
     <main>
         <p class="page-description">
-          「献立」と「在庫」を比べて<br>足りない食材を自動でリストアップします。
+          献立と在庫を比べて足りない食材を自動でリストアップ!!
         </p>
 
         <div id="total-cost-container" class="hidden">
@@ -19,7 +19,7 @@
         </div>
 
         <ul id="shopping-list" class="list-container todo-list"></ul>
-        <p id="shopping-empty-message" class="hidden" style="text-align: center; margin-top: 20px;">買うものはありません！</p>
+        <p id="shopping-empty-message" class="hidden" style="text-align: center; margin-top: 20px;">買うものはありません</p>
         
     </main>
 
