--- a/stock.html
+++ b/stock.html
@@ -15,13 +15,13 @@
 
     <main>
         <p class="page-description">
-          購入した食材や使い残しを<br>賞味期限と一緒に管理できます。
+          購入した食材の在庫と賞味期限を管理!!
         </p>
 
         <ul id="stock-list" class="list-container"></ul>
         
         <p id="stock-empty-message" class="hidden" style="text-align: center; margin-top: 20px;">
-          在庫はまだありません。
+          在庫はまだありません<br>右下の＋ボタンから追加してください
         </p>
     </main>
 
