--- a/menu.html
+++ b/menu.html
@@ -12,11 +12,11 @@
 
   <main>
     <p class="page-description">
-      ホーム画面で ❤️ 保存した<br>お気に入りレシピの一覧です。
+      ホーム画面でLIKE❤️したお気に入りレシピの一覧!!
     </p>
 
     <ul id="menu-list" class="list-container"></ul>
-    <p id="empty-message" class="hidden" style="text-align: center; margin-top: 20px;">まだ献立がありません。</p>
+    <p id="empty-message" class="hidden" style="text-align: center; margin-top: 20px;">まだ献立がありません</p>
   </main>
 
   <footer>
